make jumbotron curvier

--- a/client/src/components/styles.css
+++ b/client/src/components/styles.css
@@ -2,6 +2,7 @@
     padding: 1.5rem 1.5rem !important;
     background-color: white !important;
     margin-bottom: 1em !important;
+    border-radius: 10px !important;
 }
 
 .module h1 {
